# sqlcheck

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  bootstrap
.github/workflows/: build-release.yml  main.yml
cmake/: CMakeParseArguments.cmake  FindGTest.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake
docs/application/: 4001.md
docs/logical/: 1001.md  1001.txt  1002.md  1003.md  1004.md  1005.md  1006.md  1007.md
docs/physical/: 2001.md  2002.md  2003.md  2004.md  2005.md
docs/query/: 3001.md  3002.md  3003.md  3004.md  3005.md  3006.md  3007.md  3008.md  3009.md  3010.md  3011.md  3012.md  3013.md  3014.md  3015.md  3016.md
examples/: auctionmark-ddl.sql  query4.sql  si-ddl.sql  top_mutexes.sql
release/: SQLCheck-1.0.5-1.x86_64.deb  SQLCheck-1.0.5-1.x86_64.rpm
script/: packages.sh
src/: CMakeLists.txt  checker.cpp  configuration.cpp  list.cpp  main.cpp
src/include/: checker.h  color.h  configuration.h  list.h
test/: CMakeLists.txt  args_test.cpp  basic_test.cpp  test_suite.cpp
